--- a/Work2.html
+++ b/Work2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/experience.css">
   </head>
 
