--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christina Truong, Tech Educator + Front-end Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Cute+Font&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <main>
+
       <!-- ***************  ABOUT / PROFILE  **************** -->
       <header>
         <div class="content-wrap">
@@ -110,6 +112,7 @@
       <!-- ************  CONTACT INFO / SOCIAL MEDIA  ************ -->
       <footer>
         <div class="content-wrap">
+      
           <h2>Let's Keep in Touch!</h2>
 
           <!-- Social media and contact links. Add or remove any networks. -->
