--- a/index2.html
+++ b/index2.html
@@ -94,19 +94,20 @@
           <!-- pic 1 --->
           <section class= "gallery-item">
             <a href = "/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/music.jpg">
-              <img src ="/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/music.jpg"></a>
+              <img src ="/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/music.jpg"
+              style="width:150px"></a>
               <h3>Listening to Music</h3>
 
               <!-- pic 2 --->
           <section class= "gallery-item">
             <a href = "/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/eating.jpg">
-              <img src ="/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/eating.jpg"></a>
+              <img src ="/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/eating.jpg"style="width:150px"></a>
               <h3>Eating</h3>
 
               <!-- pic 3 --->
           <section class= "gallery-item">
             <a href = "/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/travelling.jpg">
-              <img src ="/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/travelling.jpg"></a>
+              <img src ="/Users/rachelprasetya/Documents/GitHub/css-basic-challenge-Rach091/travelling.jpg"style="width:150px"></a>
               <h3>Travelling</h3>
 
       <!-- ************  CONTACT INFO / SOCIAL MEDIA  ************ -->
